// kvdbserver gRPC API
// API version: 0.1.0
//
// This package contains Protobuf definitions related to key-value storage.

syntax = "proto3";
package api.v0.kvpb;

option go_package = "api/v0/kvpb";

message SetStringRequest {
  // The key to use.
  string key = 1;
  // The value to store.
  string value = 2;
}

message SetStringResponse {}

message GetStringRequest {
  // The key to use.
  string key = 1;
}

message GetStringResponse {
  // The returned value.
  string value = 1;
  // True if the key exists. False if it doesn't exist.
  bool ok = 2;
}

// StringKVService provides RPCs related to String keys.
//
// Common gRPC metadata keys for this service's RPCs:
// - password: The server password. Used for authentication if the server is password protected.
// - database: The database to use. If omitted, the default database is used.
service StringKVService {
  // SetString sets a key to hold a String value. Creates the key if it doesn't exist.
  // Overwrites the key if it is holding a value of another data type.
  // Uses the database sent in gRPC metadata or the default database if omitted.
  rpc SetString(SetStringRequest) returns (SetStringResponse) {}

  // GetString returns the value a String key is holding.
  // Uses the database sent in gRPC metadata or the default database if omitted.
  rpc GetString(GetStringRequest) returns (GetStringResponse) {}
}
